# tiny-tracker

./: .env.example  .gitignore  Cargo.toml  Dockerfile  PLAN.md  dev.sh  diesel.toml  docker-compose.dev.yml
.claude/: CLAUDE.md
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: main.rs  static_files.rs
backend/src/db/: schema.rs
backend/src/models/: mod.rs
backend/src/routes/: activity.rs  auth.rs  categories.rs  health.rs  items.rs  mod.rs  notes.rs  status.rs  users.rs  vendors.rs
cli/: Cargo.toml
cli/src/: main.rs
frontend/: Cargo.toml  index.html  styles.css
frontend/src/: main.rs
frontend/src/components/: activity_sidebar.rs  date_input.rs  header.rs  mod.rs
frontend/src/pages/: home.rs  item_detail.rs  item_form.rs  login.rs  manage_vendors.rs  mod.rs  status_style.rs
migrations/2026-02-03-000001_create_vendors/: up.sql
migrations/2026-02-03-000002_create_users/: up.sql
migrations/2026-02-03-000003_create_action_items/: down.sql  up.sql
migrations/2026-02-03-000004_create_notes/: up.sql
migrations/2026-02-03-000005_create_status_history/: down.sql  up.sql
migrations/2026-02-03-000006_create_indexes/: down.sql  up.sql
migrations/2026-02-03-000007_add_description/: down.sql  up.sql
migrations/2026-02-03-000008_add_categories/: down.sql  up.sql
migrations/2026-02-05-000009_add_vendor_archived/: down.sql  up.sql
shared/: Cargo.toml
shared/src/: types.rs
