[package]
name = "backend"
version.workspace = true
edition.workspace = true

[[bin]]
name = "action-tracker"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
diesel = { version = "2", features = ["postgres", "chrono"] }
diesel-async = { version = "0.5", features = ["postgres", "deadpool"] }
deadpool = "0.12"
futures-util = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Auth
jsonwebtoken = "9"
oauth2 = "4"
reqwest = { version = "0.12", features = ["json"] }

# Config & logging
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Static files
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"

# Error handling
thiserror = { workspace = true }
anyhow = "1"
urlencoding = "2.1.3"
tokio-postgres = "0.7.16"
tokio-postgres-rustls = "0.13.0"
rustls = "0.23.36"
rustls-platform-verifier = "0.6.2"
rand = "0.9.2"
