[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "action-tracker-cli"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }

# Database
diesel = { version = "2", features = ["postgres", "chrono"] }
dotenvy = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Error handling
anyhow = "1"
