[package]
name = "frontend"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }

# Yew framework
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"

# HTTP client for WASM
gloo-net = "0.5"
gloo-storage = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Async & WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement", "HtmlSelectElement", "Event", "EventTarget"] }

# Logging
log = "0.4"
wasm-logger = "0.2"
regex = "1.12.3"
js-sys = "0.3.85"
